--- a/Intuedit3/Client/Pages/Portfolio.razor.css
+++ b/Intuedit3/Client/Pages/Portfolio.razor.css
@@ -117,6 +117,10 @@ iframe {
     border-radius: 50px;
 }
 
+.vidsize {
+    max-width: 800px;
+}
+
 
 @media (max-width: 820px) {
     .main-container {
@@ -216,12 +220,6 @@ iframe {
 
     .video-border {
         border-radius: 0px;
-    }
-
-    video {
-        diplay: none;
-        width: 80%;
-        height: 40%;
     }
 
 }
@@ -327,10 +325,8 @@ iframe {
         border-radius: 0px;
     }
 
-    video {
-        display: none;
-        width: 100%;
-        height: 40%;
+    .vidsize {
+        max-width: 350px;
     }
 
 }
